Rogue now functions as kit instance